# overleaf-sync

./: .gitignore  clean.sh  config.example.json  cspell.json  init.sh  install.sh  overleaf_sync.py  pyproject.toml
overleaf_sync/: __init__.py  overleaf_sync.py
utils/: diff.py  overleaf-sync.sh
