[project]
name = "overleaf-sync"
version = "1.0.0"
description = "A tool for synchronizing files with Overleaf"
authors = [
    { name = "Zelun Kong", email = "lz3450@outlook.com" }
]
dependencies = [
    "requests",
    "websocket-client",
    "beautifulsoup4"
]

[project.scripts]
overleaf-sync = "overleaf_sync.overleaf_sync:main"
